victim flow almost done.... working over valunteer flow....

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sam.shamsaha">
 
+    <queries>
+        <package android:name="com.whatsapp" />
+    </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shamsaha">
+        <activity
+            android:name=".volunteer.VolunteerHomeActivity"
+            android:exported="true" />
         <activity
             android:name=".utility.SplashActivity"
             android:exported="true">
@@ -21,8 +28,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-
-
     </application>
-    <queries> <package android:name="com.whatsapp" /> </queries>
+
 </manifest>
