--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,12 +72,36 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
-
-
     //Sliding menu
     implementation 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
 
     implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.android.support:design:$supportVersion"
+
+    implementation "android.arch.lifecycle:extensions:$lifecycleExtensionVersion"
+
+    implementation "com.jakewharton:butterknife:$butterknifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+
+
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
+
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
+
+    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
 
 }
 
