--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,20 +14,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shamsaha">
         <activity
-            android:name=".volunteer.VolunteerHomeActivity"
+            android:name=".volunteer.resources.VolResourcesKotlin"
             android:exported="true" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".volunteer.VolunteerHomeActivity"
+            android:exported="true">
 
         </activity>
         <activity
             android:name=".utility.SplashActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
