--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,27 +75,19 @@ dependencies {
 
     //Sliding menu
     implementation 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
-
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "com.android.support:design:$supportVersion"
-
     implementation "android.arch.lifecycle:extensions:$lifecycleExtensionVersion"
-
     implementation "com.jakewharton:butterknife:$butterknifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
-
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
-
-
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
-
     implementation "com.github.bumptech.glide:glide:$glideVersion"
-
     implementation "com.google.dagger:dagger:$daggerVersion"
     implementation "com.google.dagger:dagger-android-support:$daggerVersion"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
@@ -103,6 +95,20 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
 
     testImplementation "org.mockito:mockito-inline:$mockitoVersion"
+
+/*    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // GSON
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'*/
+
+// coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+
+
+    //  country picker ...
+    implementation 'com.hbb20:ccp:X.Y.Z'
 
 }
 
