--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,7 +108,8 @@ dependencies {
 
 
     //  country picker ...
-    implementation 'com.hbb20:ccp:X.Y.Z'
+    // country picker
+    implementation 'com.hbb20:ccp:2.5.0'
 
 }
 
