--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sam.shamsaha">
 
+
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
     <queries>
         <package android:name="com.whatsapp" />
     </queries>
@@ -14,26 +25,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shamsaha">
         <activity
-            android:name=".retrofit.ApiTestiongActivity"
-            android:exported="true" >
-
-        </activity>
+            android:name=".chatnow.VictimVolChatActivity"
+            android:exported="true" />
         <activity
-            android:name=".volunteer.resources.VolResourcesKotlin"
+            android:name=".retrofit.ApiTestiongActivity"
             android:exported="true"></activity>
         <activity
+            android:name=".volunteer.resources.VolResourcesKotlin"
+            android:exported="true" />
+        <activity
             android:name=".volunteer.VolunteerHomeActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".utility.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MainActivity"
