--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
 
     //Sliding menu
     implementation 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
+
+
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "com.android.support:design:$supportVersion"
     implementation "android.arch.lifecycle:extensions:$lifecycleExtensionVersion"
@@ -118,6 +120,10 @@ dependencies {
     //  country picker ...
     // country picker
     implementation 'com.hbb20:ccp:2.5.0'
+
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
+
 
 }
 
