--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,14 +33,19 @@
             android:exported="true" />
         <activity
             android:name=".volunteer.VolunteerHomeActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".utility.Splash2Activity"
             android:exported="true">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".utility.Splash2Activity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".MainActivity"
