--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,23 +106,14 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
 
     testImplementation "org.mockito:mockito-inline:$mockitoVersion"
-
-/*    // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-
-    // GSON
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'*/
-
-// coroutine
+    // coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-
-
-    //  country picker ...
     // country picker
     implementation 'com.hbb20:ccp:2.5.0'
-
     implementation "androidx.fragment:fragment-ktx:1.2.5"
+    // CircleIndicator
+    implementation 'me.relex:circleindicator:2.1.6'
 
 
 
