kotlin camera galary image by sam

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,14 @@
         android:theme="@style/Theme.Shamsaha">
         <activity
             android:name=".pickimagecameragalary.PickImagelocalActivity"
-            android:exported="true" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".chatnow.VictimVolChatActivity"
             android:exported="true" />
@@ -40,11 +47,7 @@
         <activity
             android:name=".utility.Splash2Activity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
