--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,7 @@
         <activity
             android:name=".pickimagecameragalary.PickImagelocalActivity"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
@@ -43,15 +39,18 @@
             android:exported="true" />
         <activity
             android:name=".volunteer.VolunteerHomeActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".utility.Splash2Activity"
             android:exported="true">
-
         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
     </application>
-
 </manifest>
