--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shamsaha">
         <activity
+            android:name=".volunteer.ChangePasswordActivity"
+            android:exported="true" />
+        <activity
             android:name=".pickimagecameragalary.PickImagelocalActivity"
-            android:exported="true" >
-
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".chatnow.VictimVolChatActivity"
             android:exported="true" />
@@ -42,17 +42,16 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".utility.Splash2Activity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
     </application>
+
 </manifest>
